<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.sonarsource.parent</groupId>
    <artifactId>parent</artifactId>
    <version>82.0.0.2314</version>
  </parent>

  <groupId>org.sonarsource.javascript</groupId>
  <artifactId>javascript</artifactId>
  <version>10.20.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>SonarJS</name>
  <description>SonarQube JavaScript/TypeScript/CSS Analyzer</description>
  <inceptionYear>2011</inceptionYear>
  <organization>
    <name>SonarSource</name>
    <url>https://www.sonarsource.com</url>
  </organization>
  <licenses>
    <license>
      <name>SSALv1</name>
      <url>https://sonarsource.com/license/ssal/</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <developers>
    <developer>
      <id>vilchik-elena</id>
      <name>Elena Vilchik</name>
      <organization>SonarSource</organization>
    </developer>
    <developer>
      <id>saberduck</id>
      <name>Tibor Blénessy</name>
      <organization>SonarSource</organization>
    </developer>
    <developer>
      <id>yassin-kammoun-sonarsource</id>
      <name>Yassin Kammoun</name>
      <organization>SonarSource</organization>
    </developer>
    <developer>
      <id>ilia-kebets-sonarsource</id>
      <name>Ilia Kebets</name>
      <organization>SonarSource</organization>
    </developer>
    <developer>
      <id>vdiez</id>
      <name>Victor Diez</name>
      <organization>SonarSource</organization>
    </developer>
  </developers>

  <modules>
    <module>sonar-plugin</module>
    <module>tools</module>
    <!--
      its module is added via profile below
    -->
  </modules>

  <scm>
    <connection>scm:git:git@github.com:SonarSource/sonar-javascript.git</connection>
    <developerConnection>scm:git:git@github.com:SonarSource/sonar-javascript.git</developerConnection>
    <url>https://github.com/SonarSource/sonar-javascript</url>
    <tag>HEAD</tag>
  </scm>
  <issueManagement>
    <url>https://github.com/SonarSource/sonar-javascript/issues</url>
  </issueManagement>

  <properties>
    <gitRepositoryName>SonarJS</gitRepositoryName>
    <license.title>SonarQube JavaScript Plugin</license.title>
    <!-- Version corresponds to SQ 9.9 LTS -->
    <pluginApiMinVersion>9.14.0.375</pluginApiMinVersion>

    <assertj.version>3.26.3</assertj.version>
    <jgit.version>7.1.0.202411261347-r</jgit.version>
    <junit.version>5.11.4</junit.version>
    <mockito.version>5.14.2</mockito.version>
    <slf4j.version>2.0.16</slf4j.version>
    <sonar.version>24.12.0.100206</sonar.version>
    <sonar.api.version>10.14.0.2599</sonar.api.version>
    <sonar-orchestrator.version>5.1.0.2254</sonar-orchestrator.version>
    <gson.version>2.11.0</gson.version>
    <analyzer-commons.version>2.16.0.3141</analyzer-commons.version>
    <sslr.version>1.24.0.633</sslr.version>
    <sonarlint.plugin.api.version>9.8.0.76914</sonarlint.plugin.api.version>

    <artifactsToPublish>${project.groupId}:sonar-javascript-plugin:jar</artifactsToPublish>
    <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>
    <maven.compiler.release>17</maven.compiler.release>
    <jdk.min.version>17</jdk.min.version>
    <version.surefire.plugin>3.1.2</version.surefire.plugin>

    <!-- FIXME fix javadoc errors -->
    <doclint>none</doclint>

    <!-- sonar analysis -->
    <sonar.sources>packages/</sonar.sources>
    <sonar.exclusions>packages/**/*.test.ts,packages/**/*.fixture.*,packages/**/fixtures/**/*</sonar.exclusions>
    <sonar.tests>packages/</sonar.tests>
    <sonar.test.inclusions>packages/**/*.test.ts</sonar.test.inclusions>
    <sonar.javascript.lcov.reportPaths>lcov.info</sonar.javascript.lcov.reportPaths>
    <sonar.typescript.tsconfigPath>${project.basedir}/packages/tsconfig.app.json,${project.basedir}/packages/tsconfig.test.json</sonar.typescript.tsconfigPath>
    <sonar.cpd.exclusions>sonar-plugin/javascript-checks/src/main/resources/**/*.html</sonar.cpd.exclusions>
    <sonar.coverage.exclusions>packages/ruling/**,packages/jsts/tests/tools/testers/**</sonar.coverage.exclusions>
  </properties>

  <dependencyManagement>
    <dependencies>

      <!-- Default dependencies (compile) -->
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>api</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>bridge</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>javascript-checks</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>css</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.analyzer-commons</groupId>
        <artifactId>sonar-analyzer-commons</artifactId>
        <version>${analyzer-commons.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.code.gson</groupId>
        <artifactId>gson</artifactId>
        <version>${gson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.code.findbugs</groupId>
        <artifactId>jsr305</artifactId>
        <version>3.0.2</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-compress</artifactId>
        <version>1.27.1</version>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>2.18.0</version>
      </dependency>
      <dependency>
        <groupId>commons-lang</groupId>
        <artifactId>commons-lang</artifactId>
        <version>2.6</version>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.sslr</groupId>
        <artifactId>sslr-core</artifactId>
        <version>${sslr.version}</version>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.sonarlint.core</groupId>
        <artifactId>sonarlint-plugin-api</artifactId>
        <version>${sonarlint.plugin.api.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.tukaani</groupId>
        <artifactId>xz</artifactId>
        <version>1.10</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.version}</version>
      </dependency>


      <!-- Test dependencies -->
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>${junit.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>${mockito.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>${assertj.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jgit</groupId>
        <artifactId>org.eclipse.jgit</artifactId>
        <version>${jgit.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.sonarlint.core</groupId>
        <artifactId>sonarlint-core</artifactId>
        <version>${sonarlint.plugin.api.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.orchestrator</groupId>
        <artifactId>sonar-orchestrator-junit5</artifactId>
        <version>${sonar-orchestrator.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.sonarqube</groupId>
        <artifactId>sonar-ws</artifactId>
        <version>${sonar.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.awaitility</groupId>
        <artifactId>awaitility</artifactId>
        <version>4.2.2</version>
        <scope>test</scope>
      </dependency>

      <!-- Provided dependencies -->
      <dependency>
        <groupId>org.sonarsource.api.plugin</groupId>
        <artifactId>sonar-plugin-api</artifactId>
        <version>${sonar.api.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.sonarqube</groupId>
        <artifactId>sonar-plugin-api-impl</artifactId>
        <version>${sonar.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>1.5.12</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.sonarsource.javascript</groupId>
        <artifactId>sonar-javascript-plugin</artifactId>
        <type>sonar-plugin</type>
        <version>${project.version}</version>
        <scope>provided</scope>
      </dependency>


      <dependency>
        <groupId>org.sonarsource.api.plugin</groupId>
        <artifactId>sonar-plugin-api-test-fixtures</artifactId>
        <version>${sonar.api.version}</version>
        <scope>test</scope>
      </dependency>

    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>com.mycila</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <!-- This plugin is already configured in parent pom, however we want a configuration specific to this project -->
        <configuration>
          <mapping>
            <js>SLASHSTAR_STYLE</js>
            <mjs>SLASHSTAR_STYLE</mjs>
            <cjs>SLASHSTAR_STYLE</cjs>
            <ts>SLASHSTAR_STYLE</ts>
          </mapping>
          <licenseSets>
            <licenseSet>
              <includes>
                <include>**/*.java</include>
                <include>**/*.js</include>
                <include>**/*.cjs</include>
                <include>**/*.mjs</include>
                <include>**/*.ts</include>
              </includes>
              <excludes>
                <!-- Files -->
                <exclude>server.mjs</exclude>
                <exclude>**/*.d.ts</exclude>
                <!-- Folders -->
                <exclude>its/**/*</exclude>
                <!-- Generated -->
                <exclude>**/bin/**/*</exclude>
                <exclude>**/dist/**/*</exclude>
                <exclude>**/lib/**/*</exclude>
                <!-- Fixtures -->
                <exclude>**/fixtures/**/*</exclude>
                <exclude>**/*.fixture.*</exclude>
                <!-- Resources -->
                <exclude>**/src/test/resources/**/*</exclude>
              </excludes>
            </licenseSet>
          </licenseSets>
        </configuration>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>3.5.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>its</id>
      <modules>
        <module>its</module>
      </modules>
    </profile>
  </profiles>

</project>
